--- a/src/components/Roadmap/RoadmapCard.scss
+++ b/src/components/Roadmap/RoadmapCard.scss
@@ -1,5 +1,6 @@
 .Roadmap-card {
   width: 18.4rem;
+  min-width: 18.4rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -9,6 +10,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 1.6rem;
+  gap: 2.8rem;
 }
 
 .Roadmap-card-icon {
@@ -37,7 +39,6 @@
 
 .Roadmap-card-line {
   width: 9.6rem;
-  margin-left: 2.8rem;
   border-top: 0.2rem;
   border-style: dashed;
   border-color: #292929;
@@ -62,11 +63,11 @@
 .Roadmap-card-description {
   font-size: 1.3rem;
   line-height: 1.6rem;
-  color: #807D7D;
+  color: var(--color-neutral-500);
 }
 
 .Roadmap-card.completed .Roadmap-card-description {
-  color: #807D7D66;
+  color: var(--color-neutral-500); opacity: 0.4;
 }
 
 .Roadmap-card-currentphase {
