--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -44,10 +44,10 @@
 }
 
 .Home-description {
-  font-size: 1.6rem;
+  font-size: var(--font-base);
   text-align: center;
   line-height: 2.4rem;
-  max-width: 40rem;
+  max-width: 38.4rem;
   color: var(--color-neutral-200);opacity: 0.7;
   margin-bottom: 4rem;
 }
@@ -75,7 +75,7 @@
 .Home-email-input input {
   background: transparent;
   border: none;
-  color: var(--color-neutral-500);
+  color: var(--color-neutral-600);
   font-size: 1.4rem;
   line-height: 2.4rem;
   width: 100%;
@@ -163,7 +163,7 @@
   font-size: 1.3rem;
   line-height: 2rem;
   max-width: 25.6rem;
-  color: var(--color-slate-100);
+  color: var(--color-neutral-500);
   letter-spacing: 0;
 }
 
@@ -772,19 +772,34 @@
     grid-template-columns: 1fr;
     grid-row-gap: 1.5rem;
   }
+  
+  .Home-tokenomics-section {
+    padding-top: 3.2rem;
+    padding-bottom: 3.2rem;
+  }
+  
+  .Home-benefits-section {
+    padding-bottom: 3.2rem;
+  }
 }
 
 @media (max-width: 500px) {
   .Home-title-section-container {
-    padding-top: 7.4rem;
+    padding-top: 6.2rem;
   }
 
   .Home-title {
     font-size: 3.2rem;
     line-height: 4.03rem;
     font-weight: bold;
-    margin-bottom: 1.5rem;
-    letter-spacing: 0;
+    margin-bottom: 1.6rem;
+  }
+
+  .Home-tokenomics-title {
+    font-size: 3.2rem;
+    line-height: 4.03rem;
+    font-weight: bold;
+    margin-bottom: 1.6rem;
   }
 
   .Home-cta-options {
@@ -831,10 +846,10 @@
 @media (max-width: 400px) {
   .Home-description {
     font-size: var(--font-base);
-    line-height: 2.17rem;
-    max-width: 44.4rem;
-    color: var(--color-slate-100);
-    margin-bottom: 2.6rem;
+    line-height: 2.4rem;
+    max-width: 36.1rem;
+    color: var(--color-neutral-200); opacity: 0.5;
+    margin-bottom: 3.8rem;
   }
 
   .Home-latest-info__value {
@@ -847,7 +862,7 @@
     font-size: 3.875rem;
     line-height: 4.65rem;
     font-weight: bold;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.6rem;
     letter-spacing: 0;
   }
 
